# iemap-api

./: .gitignore  1.cif  Dockerfile  LICENSE  Makefile  README.md  env.sample  model_iemap.py  ngl.html  pyproject.toml  requirements.old2  requirements.txt  schema_db.json  test.py  useful_res.md
.github/workflows/: docker-image.yml
app/: env.sample  log_conf.yml  log_config.py  main.py  main_old_version.py
app/api/: on_premise_auth.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: authentication.py  fileshandling.py  health.py  project.py  stats.py  user_projects.py
app/core/: auth.py  config.py  errors.py  jwt.py  log_config.py  parsing.py  security.py  smtp_email.py  smtp_email_OLD.py  utils.py
app/crud/: health.py  pipelines.py  profile.py  projects.py  stats.py  user.py
app/db/: mongodb_utils.py
app/graphql/: mutations.py  queries.py  schema.graphql  store.py  subscriptions.py
app/models/: dbmodel.py  iemap OLD.py  iemap.py  profile.py  schema_db.json  schemas.py  token.py  user.py  users.py
app/server/: app.py  config.py  database.py  mutations.py  queries.py  store.py
app/server/models/: item.py
app/server/routes/: files.py  items.py
app/server/utils/: hashing_file.py
app/static/: form_styles.css  script.js
app/templates/: form.html  item.html  mail_template.html  reset_pwd_template.html
docs/: conf.py  index.md
