[tool.poetry]
name = "iemap-api"
version = "1.1.1"
description = "REST API for Mission Innovation IEMAP portal"
authors = ["SergioEanX <sergio.ferlito@enea.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "3.4.3"
anyio = "3.4.0"
asgiref = "3.4.1"
click = "8.0.3"
fastapi = "^0.83.0"
h11 = "0.12.0"
httptools = "0.3.0"
idna = "3.3"
motor = "2.5.1"
pydantic = "^1.10.2"
pymongo = "3.12.3"
python-dotenv = "0.19.2"
PyYAML = "6.0"
sniffio = "1.2.0"
starlette = "0.19.1"
typing-extensions = "^4.3.0"
uvicorn = "^0.18.3"
uvloop = "0.16.0"
watchgod = "0.7"
websockets = "10.1"
ariadne = "^0.16.0"
python-multipart = "0.0.5"
aiofiles = "^22.1.0"
PyJWT = "^2.4.0"
bcrypt = "^4.0.0"
passlib = "^1.7.4"
email-validator = "^1.2.0"
colorlog = "^6.6.0"
sentry-sdk = "^1.5.11"
pymatgen = "^2022.4.26"
Jinja2 = "^3.1.2"
beanie = "^1.11.0"
fastapi-users = {extras = ["beanie"], version = "^10.0.6"}
aiosmtplib = "^1.1.7"



[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
