[tool.poetry]
name = "mi-api"
version = "0.1.0"
description = ""
authors = ["SergioEanX <sergio.ferlito@enea.it>"]
readme = "README.md"
packages = [{include = "mi_api"}]

[tool.poetry.dependencies]
python = "^3.9"
sentry-sdk = "^1.10.1"
motor = "^3.1.1"
uvicorn = "^0.19.0"
fastapi-users = "^10.2.1"
fastapi-users-db-beanie = "^1.1.2"
aiofiles = "^22.1.0"
fastapi = "^0.86.0"
jinja2 = "^3.1.2"
python-dotenv = "^0.21.0"
python-multipart = "^0.0.5"
aiosmtplib = "^2.0.0"
pymatgen = "^2022.11.1"
colorlog = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
